# trend-lab-agent-tripwire-260615

./: README.md  pyproject.toml
src/agent_tripwire/: main.py
tests/: test_smoke.py
