[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agent-tripwire"
version = "0.1.0"
description = "Canary secrets for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentTripwire contributors" }]
dependencies = []

[project.scripts]
agent-tripwire = "agent_tripwire.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tripwire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
